[workspace]
members = [
    "bindings/uniffi-bindgen",
    "crates/*",
]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>", "thesimplekid <tsk@thesimplekid.com>"]
homepage = "https://github.com/rust-cashu/cdk"
repository = "https://github.com/rust-cashu/cdk.git"
license = "MIT"
rust-version = "1.64.0" # TODO

[workspace.dependencies]
thiserror = "1.0"
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
uniffi = "0.27"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
