[package]
name = "cdk"
version = "0.1.0"
edition = "2021"
description = "Cashu Development Kit"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["cashu", "sdk", "bitcoin", "lightning"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["mint", "wallet", "all-nuts", "redb"]
mint = []
wallet = ["dep:reqwest"]
all-nuts = ["nut13"]
nut13 = ["dep:bip39"]
redb = ["dep:redb"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bip39 = { version = "2.0", optional = true }
bitcoin = { version = "0.30", features = ["std", "serde", "rand", "rand-std"] }
lightning-invoice = { version = "0.29", features = ["serde"] } # This use bitcoin v0.30
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"], optional = true }
serde = "1.0"
serde_json = "1.0"
thiserror.workspace = true
tracing.workspace = true
url = "2.5"
uuid = { version = "1.8", features = ["v4"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
redb = { version = "2.0.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
